Fixed issue #42: days with multiple events show the events overlapping in IE 6

--- a/p4a/calendar/browser/resources/calendar.css
+++ b/p4a/calendar/browser/resources/calendar.css
@@ -117,26 +117,22 @@
     height: 6em;
 }
 
+.p4acalendar .event-item {
+    height: 1.4em;
+}
 
 .p4acalendar .event-title {
     font-size: 1em;
 }
 
 /*
-	These are IE6 fixes.  The underscore hack is read by ONLY Windows IE6
-	and invalidates the CSS.
+    These are IE6 fixes.  The underscore hack is read by ONLY Windows IE6
+    and invalidates the CSS.
 */
 
 .day dl dd {
-	_margin-bottom: 20px;
-	}
-	
-.p4acalendar .event-title {
-	_display: block;
-	_position: relative;
-	_overflow: hidden !important;
-	_width: 100%;
-	}
+    _margin-bottom: 20px;
+}
 
 /* grid start */
 /*
